@@ -1,3 +1,5 @@
+* Remove overly complex position code from Element#relativize and Element#absolutize. [jddalton]
+
 * Make Element.extend() skip XML nodes to avoid errors in IE. Closes #9709. [jddalton, yanick.rochon]
 
 * Rewrite String#escapeHTML and String#unescapeHTML to ensure more consistent output across browsers. Closes #8452. [jddalton, slusarz, Tobie Langel)
